--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -17,9 +17,10 @@ spring:
         hbm2ddl:
           auto: update
 
-
   datasource:
-    username: dark
+    username: root
     password: zalupakonskaya6869
-    url: jdbc:mysql://77.232.37.111:3306/products
+    url: jdbc:mysql://194.58.120.217:5555/products
     driver-class-name: com.mysql.cj.jdbc.Driver
+    hikari:
+      max-lifetime: 600000
