--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -4,7 +4,7 @@ spring.datasource.password=${MSQL_PASSWORD:root}
 spring.datasource.username=${MSQL_USERNAME:root}
 spring.jpa.hibernate.ddl-auto=update
 server.servlet.context-path=/
-spring.jooq.sql-dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=false
 spring.datasource.url=jdbc:mysql://${MSQL_SERVER:localhost}:${MSQL_PORT:3306}/${MSQL_DB:products}
